--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "antd": "^6.1.1",
+    "axios": "^1.13.2",
     "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
